Fix how client logos are displayed on mobile

--- a/source/stylesheets/site/segments.scss
+++ b/source/stylesheets/site/segments.scss
@@ -13,4 +13,20 @@
   #services {
     display: block;
   }
+
+  #clients {
+    display: block;
+    overflow: auto;
+
+    .segment {
+      text-align: center;
+      width: 50%;
+      float: left;
+
+      img {
+        display: inline;
+        width: 100%;
+      }
+    }
+  }
 }
